fix: add 100% width and overflow-x hidden to body

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -9,6 +9,8 @@ html, body, #dashboard {
 body {
   font-family: $font-family;
   background-color: $body-bg;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 .main-container {
